# ConnectsLab

./: .gitignore  README.md  docker-compose.yaml
airflow/: docker-compose.yaml  requirements.txt
airflow/dags/: STT.py  task.py
airflow/dags/dash/static/css/: style.css
airflow/dags/dash/templates/: index.html
backend/app/: main.py
backend/app/routers/: audio.py
dags/: STT.ipynb  data.csv  task.py
dags/dash/: main.py
dags/dash/static/css/: style.css
dags/dash/templates/: index.html
dags/function/: clova_function.py  database.py
django/connectslab/: manage.py
django/connectslab/connectslab/: asgi.py  settings.py  urls.py  wsgi.py
logs/dag_id=stt_task/run_id=manual__2024-03-24T05:21:20.088718+00:00/task_id=STT/: main.py
logs/scheduler/: latest
web/: docker-compose.yml
web/backend/: pyproject.toml  run.sh
web/backend/app/: config.py  main.py  services.py  stt.py  tagger.py
web/backend/app/database/: db_connection.py  query.py  worker.py
web/backend/app/routers/: audio.py  files.py  stt.py  test.ipynb  users.py
web/backend/app/routers/clovaapi/: clova_function.py
web/backend/app/routers/function/: clova_function.py  database.py
web/backend/app/services/: api.py  gen_wordcloud.py  stt.py
web/cl/: pyproject.toml  rxconfig.py
web/cl/cl/: cl.py
web/cl/cl/backend/: config.py  main.py
web/cl/cl/backend/database/: db_connection.py  worker.py
web/cl/cl/backend/routers/: audio.py  files.py  stt.py  test.py  users.py
web/cl/cl/backend/routers/clovaapi/: clova_function.py
web/cl/cl/backend/services/: gen_wordcloud.py  stt.py
web/cl/cl/router/: app.py
web/db/: DDL.SQL
web/db/data/postgresql/: postmaster.pid
web/db/data/postgresql/base/13757/: 2619  pg_internal.init
web/db/data/postgresql/base/16384/: 1247  1249  1259  16385  16390  16391  16393  16398  16399  16401  16401_fsm  16405  16406  16407  (+46 more)
web/db/data/postgresql/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
web/db/data/postgresql/pg_stat_tmp/: db_0.stat  db_13757.stat  db_16384.stat  global.stat
web/db/data/postgresql/pg_xact/: 0000
web/ui/: config.yaml  pyproject.toml  run.sh
web/ui/.streamlit/: config.toml  secrets.toml
web/ui/app/: generate_keys.py  helper.py  main.py  request.py  requirements.txt
web/ui/app/pages/: 1_page_1.py  2_page_2.py  Upload_file.py  edit_stt_data.py  edit_stt_results.py  test.py  wordcloud.py
web/ui/app/pages/services/: services.py
