[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["juyony <wnsdyd1991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.29"
fastapi = {extras = ["all"], version = "^0.110.1"}
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
pandas = "^2.2.2"
requests = "^2.31.0"
wordcloud = "^1.9.3"
konlpy = "^0.6.0"
mecab-ko = "^1.0.1"
plotly = "^5.21.0"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
