[tool.poetry]
name = "cl"
version = "0.1.0"
description = ""
authors = ["juyony <wnsdyd1991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
reflex = "^0.4.9"
pandas = "^2.2.2"
pydantic-settings = "^2.2.1"
matplotlib = "^3.8.4"
mecab-ko = "^1.0.1"
seaborn = "^0.13.2"
wordcloud = "^1.9.3"
psycopg2 = "^2.9.9"
konlpy = "^0.6.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
